Fix top margin cutoff

--- a/client/src/pages/Home.scss
+++ b/client/src/pages/Home.scss
@@ -1,5 +1,6 @@
 .Home {
 	margin: auto;
+	margin-top: 5rem;
 	max-width: 50rem;
 	display: flex;
 	flex-direction: row-reverse;
